--- a/vecher_article/pom.xml
+++ b/vecher_article/pom.xml
@@ -18,7 +18,6 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.18</version>
         </dependency>
         <dependency>
             <groupId>com.vecher</groupId>
@@ -35,10 +34,10 @@
             <version>2.0.4.RELEASE</version>
         </dependency>
         <!--用于在配置中心读取文件-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.cloud</groupId>-->
-        <!--            <artifactId>spring-cloud-starter-config</artifactId>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <!-- 消息总线 用于触发刷新配置文件更新-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
