--- a/vecher_managerzuul/pom.xml
+++ b/vecher_managerzuul/pom.xml
@@ -20,7 +20,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
-
+        <!--用于在配置中心读取文件-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.vecher</groupId>
             <artifactId>vecher_common</artifactId>
