--- a/vecher_qa/pom.xml
+++ b/vecher_qa/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>2.0.4.RELEASE</version>
         </dependency>
+        <!--用于在配置中心读取文件-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <!--消息总线-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
