--- a/vecher_webzuul/pom.xml
+++ b/vecher_webzuul/pom.xml
@@ -20,6 +20,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!--用于在配置中心读取文件-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <!--消息总线-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
