--- a/vecher_search/src/main/resources/application-bak.yml
+++ b/vecher_search/src/main/resources/application-bak.yml
@@ -6,6 +6,8 @@ spring:
   data:
     elasticsearch:
       cluster-nodes: 192.168.163.128:9300
+      repositories:
+        enabled: true
 eureka:
   client:
     service-url:
