--- a/vecher_base/pom.xml
+++ b/vecher_base/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>RELEASE</version>
+            <version>2.1.5</version>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
